@@ -27,6 +27,7 @@
       - simple html errors
     * Changed args to kwargs for high level commands
     * HTTP Request handling improvement
+    * own Serial class implementation (speed improvement)
 
 0.5.1 (2021-07-16)
     * Implementation of print after upload endpoint
